--- a/file/C_/My Web Sites/MZ/preview.colorlib.com/theme/calvino/services.html
+++ b/file/C_/My Web Sites/MZ/preview.colorlib.com/theme/calvino/services.html
@@ -1,16 +1,13 @@
 <!doctype html>
 <html class="no-js" lang="zxx">
 
-<!-- Mirrored from preview.colorlib.com/theme/calvino/services.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 13 Jun 2023 05:29:49 GMT -->
-
-<!-- Mirrored from file:///C:/My Web Sites/MZ/preview.colorlib.com/theme/calvino/services.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 13 Jun 2023 05:32:02 GMT -->
 <head>
 <meta charset="utf-8">
 <meta http-equiv="x-ua-compatible" content="ie=edge">
-<title>SEO | Template</title>
+<title>MARKET BOOST</title>
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="shortcut icon" type="image/x-icon" href="assets/img/icon/favicon.png">
+<link rel="shortcut icon" type="image/x-icon" href="assets/img/icon/market_boost_icon.png">
 
 <link rel="stylesheet" href="assets/css/bootstrap.min.css">
 <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
@@ -22,53 +19,20 @@
 <link rel="stylesheet" href="assets/css/slick.css">
 <link rel="stylesheet" href="assets/css/nice-select.css">
 <link rel="stylesheet" href="assets/css/style.css">
-<script nonce="a82bd1f8-669e-45cd-87f2-ac6ee5a04213">(function(w,d){!function(dK,dL,dM,dN){dK[dM]=dK[dM]||{};dK[dM].executed=[];dK.zaraz={deferred:[],listeners:[]};dK.zaraz.q=[];dK.zaraz._f=function(dO){return function(){var dP=Array.prototype.slice.call(arguments);dK.zaraz.q.push({m:dO,a:dP})}};for(const dQ of["track","set","debug"])dK.zaraz[dQ]=dK.zaraz._f(dQ);dK.zaraz.init=()=>{var dR=dL.getElementsByTagName(dN)[0],dS=dL.createElement(dN),dT=dL.getElementsByTagName("title")[0];dT&&(dK[dM].t=dL.getElementsByTagName("title")[0].text);dK[dM].x=Math.random();dK[dM].w=dK.screen.width;dK[dM].h=dK.screen.height;dK[dM].j=dK.innerHeight;dK[dM].e=dK.innerWidth;dK[dM].l=dK.location.href;dK[dM].r=dL.referrer;dK[dM].k=dK.screen.colorDepth;dK[dM].n=dL.characterSet;dK[dM].o=(new Date).getTimezoneOffset();if(dK.dataLayer)for(const dX of Object.entries(Object.entries(dataLayer).reduce(((dY,dZ)=>({...dY[1],...dZ[1]})),{})))zaraz.set(dX[0],dX[1],{scope:"page"});dK[dM].q=[];for(;dK.zaraz.q.length;){const d_=dK.zaraz.q.shift();dK[dM].q.push(d_)}dS.defer=!0;for(const ea of[localStorage,sessionStorage])Object.keys(ea||{}).filter((ec=>ec.startsWith("_zaraz_"))).forEach((eb=>{try{dK[dM]["z_"+eb.slice(7)]=JSON.parse(ea.getItem(eb))}catch{dK[dM]["z_"+eb.slice(7)]=ea.getItem(eb)}}));dS.referrerPolicy="origin";dS.src="../../cdn-cgi/zaraz/sd0d9d0d9.js?z="+btoa(encodeURIComponent(JSON.stringify(dK[dM])));dR.parentNode.insertBefore(dS,dR)};["complete","interactive"].includes(dL.readyState)?zaraz.init():dK.addEventListener("DOMContentLoaded",zaraz.init)}(w,d,"zarazData","script");})(window,document);</script></head>
+<script
+  src="https://code.jquery.com/jquery-3.7.0.min.js"
+  integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g="
+  crossorigin="anonymous"></script>
+<script> 
+    $(function(){
+      $("#header").load("header.html"); 
+      $("#footer").load("footer.html"); 
+    });
+</script> 
+<script nonce="a82bd1f8-669e-45cd-87f2-ac6ee5a04213">(function(w,d){!function(dK,dL,dM,dN){dK[dM]=dK[dM]||{};dK[dM].executed=[];dK.zaraz={deferred:[],listeners:[]};dK.zaraz.q=[];dK.zaraz._f=function(dO){return function(){var dP=Array.prototype.slice.call(arguments);dK.zaraz.q.push({m:dO,a:dP})}};for(const dQ of["track","set","debug"])dK.zaraz[dQ]=dK.zaraz._f(dQ);dK.zaraz.init=()=>{var dR=dL.getElementsByTagName(dN)[0],dS=dL.createElement(dN),dT=dL.getElementsByTagName("title")[0];dT&&(dK[dM].t=dL.getElementsByTagName("title")[0].text);dK[dM].x=Math.random();dK[dM].w=dK.screen.width;dK[dM].h=dK.screen.height;dK[dM].j=dK.innerHeight;dK[dM].e=dK.innerWidth;dK[dM].l=dK.location.href;dK[dM].r=dL.referrer;dK[dM].k=dK.screen.colorDepth;dK[dM].n=dL.characterSet;dK[dM].o=(new Date).getTimezoneOffset();if(dK.dataLayer)for(const dX of Object.entries(Object.entries(dataLayer).reduce(((dY,dZ)=>({...dY[1],...dZ[1]})),{})))zaraz.set(dX[0],dX[1],{scope:"page"});dK[dM].q=[];for(;dK.zaraz.q.length;){const d_=dK.zaraz.q.shift();dK[dM].q.push(d_)}dS.defer=!0;for(const ea of[localStorage,sessionStorage])Object.keys(ea||{}).filter((ec=>ec.startsWith("_zaraz_"))).forEach((eb=>{try{dK[dM]["z_"+eb.slice(7)]=JSON.parse(ea.getItem(eb))}catch{dK[dM]["z_"+eb.slice(7)]=ea.getItem(eb)}}));dS.referrerPolicy="origin";dS.src="../../cdn-cgi/zaraz/sd0d9d0d9.js?z="+btoa(encodeURIComponent(JSON.stringify(dK[dM])));dR.parentNode.insertBefore(dS,dR)};["complete","interactive"].includes(dL.readyState)?zaraz.init():dK.addEventListener("DOMContentLoaded",zaraz.init)}(w,d,"zarazData","script");})(window,document);</script>
+</head>
 <body>
-<header>
-<div class="header-area header-transparent">
-<div class="main-header header-sticky">
-<div class="container-fluid">
-<div class="d-flex align-items-center justify-content-between flex-wrap position-relative">
-
-<div class="left-side d-flex align-items-center">
-<div class="logo">
-<a href="index-2.html"><img src="assets/img/logo/logo.png" alt=""></a>
-</div>
-
-<div class="main-menu d-none d-lg-block">
-<nav>
-<ul id="navigation">
-<li><a href="index-2.html">Home</a></li>
-<li><a href="about.html">About</a></li>
-<li><a href="services.html">Services</a></li>
-<li><a href="case-study.html">Case Study</a></li>
-<!--
-<li><a href="blog.html">Blog</a>
-<ul class="submenu">
-<li><a href="blog.html">Blog</a></li>
-<li><a href="blog_details.html">Blog Details</a></li>
-<li><a href="elements.html">Elements</a></li>
-</ul>
--->
-</li>
-<li><a href="contact.html">Contact</a></li>
-</ul>
-</nav>
-</div>
-</div>
-<div class="header-right-btn f-right">
-<a href="#" class="header-btn2">Call Us: <span>+1 (408) 478-1027</span></a>
-<a href="#" class="btn_0">Let's Talk</a>
-</div>
-
-<div class="col-12">
-<div class="mobile_menu d-block d-lg-none"></div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</header>
+<div id="header"></div>
 <main>
 
 <div class="slider-area position-relative">
@@ -198,11 +162,12 @@
 </div>
 <div class="card-bottom">
 <ul>
-<li>Custom website design and development with advanced functionality</li>
-<li>Enhanced user experience and conversion optimization</li>
-<li>Comprehensive on-page and technical SEO implementation</li>
-<li>Integration of analytics and conversion tracking</li>
+<li>Custom Website Development & Optimization</li>
+<li>Enhanced User Experience & Conversion</li>
+<li>Comprehensive SEO Implementation</li>
+<li>Analytics & Conversion Integration</li>
 </ul>
+
 <a href="#" class="btn_10 get-btn">Get Started</a>
 </div>
 </div>
@@ -220,17 +185,18 @@
 </div>
 <div class="card-bottom">
 <ul>
-<li>Targeted search engine marketing (SEM) campaigns (e.g., Google Ads)</li>
-<li>Strategic content marketing and blog creation</li>
-<li>Email marketing campaigns with automation and segmentation</li>
-<li>Advanced social media marketing and advertising</li>
+<li>Targeted SEM Campaigns (e.g., Google Ads)</li>
+<li>Strategic Content Marketing & Blog Creation</li>
+<li>Email Marketing Campaigns with Automation & Segmentation</li>
+<li>Email Marketing Campaigns with Automation & Segmentation</li>
 </ul>
+
 <a href="#" class="btn_10 get-btn">Get Started</a>
 </div>
 </div>
 </div>
- <div class="col-xl-4 col-lg-4 col-md-6 col-sm-10">
-<div class="single-card text-center mb-30">
+<div class="col-xl-4 col-lg-4 col-md-6 col-sm-10" >
+<div class="single-card text-center mb-30" ">
 <div class="card-top">
 <div class="cat-icon">
 <img src="assets/img/icon/price3.svg" alt="">
@@ -240,13 +206,13 @@
 <div class="card-mid">
 <!--<h4>$ 05.00</h4>-->
 </div>
-<div class="card-bottom">
-<ul>
-<li>Conversion rate optimization (CRO) analysis and recommendations</li>
-<li>A/B testing of landing pages and call-to-action elements</li>
-<li>Advanced website analytics setup and reporting</li>
-<li>In-depth performance analysis and strategic insights</li>
-</ul>
+<div class="card-bottom" style="height:50%;">
+    <ul>
+    <li>Conversion Rate Optimization (CRO) Analysis & Recommendations</li>
+    <li>A/B Testing of Landing Pages & Call-to-Action Elements</li>
+    <li>Advanced Website Analytics Setup & Reporting</li>
+    <li>In-Depth Performance Analysis & Strategic Insights</li>
+    </ul>
 <a href="#" class="btn_10 get-btn">Get Started</a>
 </div>
 </div>
@@ -345,114 +311,7 @@
 </div>
 
 </main>
-<footer>
-<div class="footer-wrapper section-img-bg2" data-background="assets/img/gallery/footer-bg.jpg">
-
-<div class="footer-area footer-padding">
-<div class="container">
-<div class="row justify-content-between">
-<div class="col-xl-3 col-lg-3 col-md-6 col-sm-8">
-<div class="single-footer-caption mb-50">
-<div class="single-footer-caption mb-30">
-
-<div class="footer-logo mb-35">
-<a href="index-2.html"><img src="assets/img/logo/logo2_footer.png" alt=""></a>
-</div>
-<div class="footer-tittle">
-<div class="footer-pera">
-<p>Some message here.</p>
-</div>
-
-<ul class="footer-social">
-<li><a href="#"><i class="fab fa-instagram"></i></a></li>
-<li><a href="https://bit.ly/sai4ull"><i class="fab fa-facebook"></i></a></li>
-<li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-</ul>
-</div>
-</div>
-</div>
-</div>
-<div class="col-xl-2 col-lg-4 col-md-4 col-sm-6">
-<div class="single-footer-caption mb-50">
-<div class="footer-tittle">
-<h4>Navigation</h4>
-<ul>
-<li><a href="#">Home</a></li>
-<li><a href="#">About</a></li>
-<li><a href="#">Services</a></li>
-<li><a href="#">Blog</a></li>
-<li><a href="#">Contact</a></li>
-</ul>
-</div>
-</div>
-</div>
-<div class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
-<div class="single-footer-caption mb-50">
-<div class="footer-tittle">
-<h4>Services</h4>
-<ul>
-<li><a href="#">Email Marketing</a></li>
-<li><a href="#">Advanced SEO and SEM</a></li>
-<li><a href="#">Social media advertisement</a></li>
-<li><a href="#">Website design and development</a></li>
-<li><a href="#">Content Marketing</a></li>
-<li><a href="#">Logo Design</a> </a></li>
-<li><a href="#">Online reputation Management</a></li>
-</ul>
-</div>
-</div>
-</div>
-<!--
-<div class="col-xl-2 col-lg-2 col-md-4 col-sm-6">
-<div class="single-footer-caption mb-50">
-<div class="footer-tittle">
-
-</div>
-</div>
-</div>
--->
-<div class="col-xxl-2 col-xl-2 col-lg-4 col-md-6 col-sm-8">
-<div class="single-footer-caption mb-50">
-<div class="footer-tittle mb-50">
-<h4>Contact Us</h4>
-<ul>
-<li class="number2"><a href="#"><span class="__cf_email__" data-cfemail="e685898892878592a68587949187958ec885898b">[email&#160;protected]</span></a></li>
-<!--<li class="number"><a href="#">+1 (408) 478-1027</a></li>-->
-</ul>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-
-<div class="footer-bottom-area">
-<div class="container">
-<div class="footer-border">
-<div class="row">
-<div class="col-xl-12 ">
-<div class="footer-copy-right text-center">
-<p>Copyright &copy;<script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com/" target="_blank" rel="nofollow noopener">Martket MZ</a></p>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-
-</div>
-</footer>
-
-<div id="back-top">
-<a class="wrapper" title="Go to Top" href="#">
-<div class="arrows-container">
-<div class="arrow arrow-one">
-</div>
-<div class="arrow arrow-two">
-</div>
-</div>
-</a>
-</div>
+<div id="footer"></div>
 
 
 <script src="assets/js/vendor/modernizr-3.5.0.min.js"></script>
